tests/mm0_mmu/fail/bad-sort43.mmu
-- free should be after provable
(sort s43 free provable)